ApiArenaXperience/src/main/java/com/example/ApiArenaXperience/error/event/EventNotFoundException.java
package com.example.ApiArenaXperience.error.event;

public class EventNotFoundException extends RuntimeException {
    public EventNotFoundException(String message) {
        super(message);
    }
}
